Do not crash on invalid progress item

A KPIM::ProgressItem can be deleted at any time, so keep
a QPointer on it and check for validity before accessing it.

BUG: 260751